--- a/20231228.md
+++ b/20231228.md
@@ -68,3 +68,51 @@ console.log(elDisAccountDOM.innerHTML)
 
 - 原生取得 `DOM` 選擇器沒選到會回傳 `null`，此時使用 `.innerHTML` 會引發錯誤
 - `jQuery` 取得 `DOM` 選擇器沒選到會回傳 `jQuery` 物件，此時使用 `.html()` 只會回傳 `undefined` 不會引發錯誤
+
+## 取得數值
+
+```js
+let elAccount = $('#account');
+console.log(elAccount.val())
+```
+
+等同
+
+```js
+let elAccountDOM = document.querySelector('#account');
+console.log(elAccountDOM.value)
+```
+
+## foreach
+
+使用 `.each((index, dom) => {})`
+
+使用 `dom = $(dom)` 重新包裝
+
+
+## 取得特定 jQuery 物件
+
+使用 `.eq(index)` 取得，會回傳 `jQuery` 物件
+
+## 取得原始 DOM
+
+`jObj[0]` 取得原始 `DOM`
+
+## 事件綁定
+
+```js
+elStudents.on('click', (e) => {
+    console.log(e.target.innerHTML);
+})
+```
+
+等同於
+
+```js
+let elStudentsDOM = document.querySelectorAll('.student')
+elStudentsDOM.forEach(dom => {
+    dom.addEventListener('click', (e) => {
+        console.log('Origin')
+    })
+})
+```
