--- a/20231228.md
+++ b/20231228.md
@@ -116,3 +116,63 @@ elStudentsDOM.forEach(dom => {
     })
 })
 ```
+
+## toggleClass
+
+等同
+
+```js
+if (jqObj.hasClass('active')) {
+    jqObj.removeClass('active');
+} else {
+    jqObj.addClass('active')
+}
+```
+
+## 屬性取得
+
+```js
+jqObj.prop('checked')
+```
+
+## 屬性設定
+
+```js
+jqObj.prop('checked', ture)
+```
+
+## 用 vue 改寫 todolist
+
+1. 複製 `js_todolist_realtime.html` 為 `vue_todolist_realtime.html`
+2. 複製 `js_todolist_realtime.css` 為 `vue_todolist_realtime.css`
+3. 新增 `vue_todolist_realtime.js` 空檔案
+4. 移除 `vue_todolist_relatime.css` 內的 `tabs` 選擇器
+5. 調整 `vue_todolist_realtime.html` 結構
+
+### 頁面切換
+
+建立 Vue App
+
+```js
+Vue.createApp({
+    data() {
+        return {
+            isAuth: false,
+        }
+    },
+    methods: {},
+    mounted() {
+        console.log('todo app is mounted.')
+    }
+}).mount('#todo-app')
+```
+
+```html
+<div class="tabs" v-show="isAuth">
+    <!-- 已登入區塊 -->
+</div>
+
+ <div class="tabs" v-show="!isAuth">
+    <!-- 未登入區塊 -->
+</div>
+```
